tests/asm-link/syntax-error-lexer-mode/rgbasm.err
error: syntax error: unexpected af
   ╭─[ test.asm:7:9 ]
   │
 7 │ def m = AF {newline} def n = 2
   │         ─┬  
   │          ╰── expected "number", "string", "character literal", "identifier", "scoped identifier", "local identifier", "anonymous label reference", ...49 others
───╯
error: syntax error: unexpected af
    ╭─[ test.asm:11:5 ]
    │
 11 │ def AF = 1 {newline} def q = 2
    │     ─┬  
    │      ╰── expected "identifier"
────╯
2 errors generated.
